Colonnes informations visibles pour les commerciaux

--- a/WebContent/mz/search/searchProspects.xhtml
+++ b/WebContent/mz/search/searchProspects.xhtml
@@ -208,8 +208,7 @@
 						</ui:include>
 					</f:facet>
 				</rich:column>
-				<rich:column style="background-color:#{_pDto.color}"
-					rendered="#{sessionDataManager.managerDispatcher}">
+				<rich:column style="background-color:#{_pDto.color}">
 					<f:facet name="header">Informations</f:facet>
 					<div
 						style="height: 60px; width: 400px; overflow-x: auto; overflow-y: auto">
