Ajout colonne mutualisee dans export Excel avec gestion LazyException

--- a/WebContent/mz/search/export/search_xls.xhtml
+++ b/WebContent/mz/search/export/search_xls.xhtml
@@ -30,7 +30,7 @@
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="#{messages['formation.mutualisees']}"/>
-			<ui:param name="value" value="#{_dto.formation.formationMutualiseesAsString}"/>
+			<ui:param name="value" value="#{applicationManager.getFormationsMutualiseesAsString(_dto.formation)}"/>
 			<ui:param name="type" value="text"/>
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
