--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -70,6 +70,11 @@
 			<ui:param name="value" value="#{WEB_URL}#{_dto.formation.urlPlb}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
+		<ui:include src="../../common/excel-column.xhtml">
+			<ui:param name="header" value="Produit5" />
+			<ui:param name="value" value="" />
+			<ui:param name="type" value="text" />
+		</ui:include>
 		
 		<ui:include src="./static_gescof2.xhtml" />
 		
