--- a/WebContent/mz/search/export/static_gescof3.xhtml
+++ b/WebContent/mz/search/export/static_gescof3.xhtml
@@ -186,7 +186,7 @@
 	</ui:include>
 			<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="ChampIDGenerique" />
-		<ui:param name="value" value="FAUX" />
+		<ui:param name="value" value="0" />
 		<ui:param name="type" value="text" />
 	</ui:include>
 	
