--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -10,7 +10,7 @@
 
 
 		<ui:include src="../../common/excel-column.xhtml">
-			<ui:param name="header" value="Code produit" />
+			<ui:param name="header" value="CodeProduit" />
 			<ui:param name="value" value="#{_dto.formation.reference}" />
 			<ui:param name="width" value="1000" />
 			<ui:param name="type" value="text" />
