Only visible in Gescoff

--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -5,7 +5,7 @@
 
 <e:workbook filename="Gescof.xls" type="jxl">
 
-	<e:worksheet name="formations" value="#{searchManager.results}"
+	<e:worksheet name="formations" value="#{searchManager.visibleResults}"
 		var="_dto" horizontalFreeze="1" verticalFreeze="1">
 
 
