--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -1,24 +1,19 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+<e:workbook xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:e="http://jboss.org/schema/seam/excel"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core" filename="Produits.xlsx" type="jxl">
 
-<e:workbook filename="Gescof.xls" type="jxl">
-
-	<e:worksheet name="formations" value="#{searchManager.visibleResults}"
+	<e:worksheet name="TempExportListing" value="#{searchManager.visibleResults}"
 		var="_dto" horizontalFreeze="1" verticalFreeze="1">
 
 
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="CodeProduit" />
 			<ui:param name="value" value="#{_dto.formation.reference}" />
-			<ui:param name="width" value="1000" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="IntituleProduit" />
 			<ui:param name="value" value="#{_dto.formation.libelle}" />
-			<ui:param name="width" value="1000" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
@@ -33,7 +28,7 @@
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="CoutTotalHT" />
-			<ui:param name="value" value="#{_dto.intra ? 0 : _dto.tarifInter}" />
+			<ui:param name="value" value="#{_dto.intra ? 0 : _dto.tarifInterAsInt}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
@@ -105,4 +100,3 @@
 
 	</e:worksheet>
 </e:workbook>
-</html>
