--- a/WebContent/mz/calendrier/calendrier.xhtml
+++ b/WebContent/mz/calendrier/calendrier.xhtml
@@ -256,7 +256,9 @@ tr:hover {
 
 						<td><h:outputLink rendered="#{_dto.formation.urlPlb != null}"
 								styleClass="calendrier"
-								value="#{WEB_URL}#{_dto.formation.urlPlb}" target="_blank">#{_dto.formation.reference}</h:outputLink>
+								value="#{WEB_URL}#{_dto.formation.urlPlb}" target="_blank">#{_dto.formation.reference}</h:outputLink><br/>
+								Cat : #{_dto.formation.categorie.rang}<br/>
+								Rang : #{_dto.formation.rangCategorie}
 								</td>
 						<td align="center">#{_dto.formation.duree}</td>
 						<td align="center" nowrap="nowrap"><h:outputText
