Reoming debug information Calendrier

--- a/WebContent/mz/calendrier/calendrier.xhtml
+++ b/WebContent/mz/calendrier/calendrier.xhtml
@@ -256,9 +256,7 @@ tr:hover {
 
 						<td><h:outputLink rendered="#{_dto.formation.urlPlb != null}"
 								styleClass="calendrier"
-								value="#{WEB_URL}#{_dto.formation.urlPlb}" target="_blank">#{_dto.formation.reference}</h:outputLink><br/>
-								Cat : #{_dto.formation.categorie.rang}<br/>
-								Rang : #{_dto.formation.rangCategorie}
+								value="#{WEB_URL}#{_dto.formation.urlPlb}" target="_blank">#{_dto.formation.reference}</h:outputLink>
 								</td>
 						<td align="center">#{_dto.formation.duree}</td>
 						<td align="center" nowrap="nowrap"><h:outputText
